# allianceauth-complete-activity-tracker

./: Makefile  README.md  pyproject.toml
aacat/: __init__.py  admin.py  api.py  apps.py  auth_hooks.py  fleet_cog.py  models.py  providers.py  schema.py  urls.py  views.py
aacat/api/: __init__.py  fat.py  fleet.py  search.py  squad.py  wing.py
aacat/helpers/: etag_helpers.py
aacat/management/commands/: cat_setup_esi.py  cat_setup_sde.py  cat_setup_ships_sde.py
aacat/migrations/: 0001_initial.py  0002_fleettype_allowable_fc_groups.py  0003_alter_fleet_fleet_type.py  0004_fleet_last_update.py  0005_fleet_fc_fleetevent_distance_from_fc.py  0006_alter_fleetevent_distance_from_fc.py
aacat/static/aacat/: manifest.json
aacat/static/aacat/assets/: @libs-BDjvwRS-.js  @libs-BDjvwRS-.js.map  (+43 more)
aacat/tasks/: __init__.py  fleet_tasks.py
aacat/templates/aacat/: index.html
aacat/tests/: __init__.py  test_providers.py
frontend/: catapi.json  catapi.json.json  copy-assets.sh  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: Api.ts  Cat.ts  CatApi.d.ts  Methods.ts  data-contracts.ts  http-client.ts
frontend/src/components/: ActiveFleetList.tsx  CharacterSeachSelect.tsx  CloseFleet.tsx  FleetCard.tsx  FleetChars.tsx  FleetComp.tsx  FleetHeader.tsx  FleetStatus.tsx  LabelDiv.tsx  TrackFleetSearch.tsx  TrackFleetSelect.tsx
frontend/src/pages/: ActiveFleetPage.tsx  FleetPage.tsx  FleetSelect.tsx  FleetStatus.tsx  FleetStructure.tsx  FleetStructureDrag.tsx  IndexPage.tsx  RecentFleetPage.tsx
tests/: test_settings.py
(+23 files in other folders)
